# C-project

./: .gitignore  .travis.yml  README.md
frontend/: CMakeLists.txt
frontend/include/: accounts.h  commit.h  data.h  event.h  session.h  tickets.h  transaction.h  user.h  xstream.h
frontend/src/: accounts.cpp  commit.cpp  data.cpp  event.cpp  main.cpp  session.cpp  tickets.cpp  transaction.cpp  user.cpp
frontend/test/: XStreamTestSuite.sh
frontend/test/ClassTestSuite/MainTestSuite/: TemplateTestSuite.sh
frontend/test/ClassTestSuite/MainTestSuite/MainTestCase/: MainTestCase.in  MainTestCase.sh
frontend/test/FunctionalTestSuite/: FunctionalTestSuite.sh
frontend/test/FunctionalTestSuite/AddCreditTestSuite/: AddCreditTestSuite.sh
frontend/test/FunctionalTestSuite/AddCreditTestSuite/InvalidAddCreditTestCaseA/: InvalidAddCreditTestCaseA.in  InvalidAddCreditTestCaseA.sh
frontend/test/FunctionalTestSuite/AddCreditTestSuite/InvalidAddCreditTestCaseB/: InvalidAddCreditTestCaseB.in  InvalidAddCreditTestCaseB.sh
frontend/test/FunctionalTestSuite/AddCreditTestSuite/ValidAddCreditTestCaseA/: ValidAddCreditTestCaseA.in  ValidAddCreditTestCaseA.sh
frontend/test/FunctionalTestSuite/AddCreditTestSuite/ValidAddCreditTestCaseB/: ValidAddCreditTestCaseB.in  ValidAddCreditTestCaseB.sh
frontend/test/FunctionalTestSuite/BuyTestSuite/: BuyTestSuite.sh
frontend/test/FunctionalTestSuite/BuyTestSuite/InvalidBuyTestCaseA/: InvalidBuyTestCaseA.in  InvalidBuyTestCaseA.sh
frontend/test/FunctionalTestSuite/BuyTestSuite/InvalidBuyTestCaseB/: InvalidBuyTestCaseB.in  InvalidBuyTestCaseB.sh
frontend/test/FunctionalTestSuite/CreateTestSuite/: CreateTestSuite.sh
frontend/test/FunctionalTestSuite/LoginTestSuite/: LoginTestSuite.sh
frontend/test/FunctionalTestSuite/SellTestSuite/: SellTestSuite.sh
frontend/test/TMP/DeleteTestSuite/: DeleteTestSuite.sh
frontend/test/TMP/LogoutTestSuite/: LogoutTestSuite.sh
frontend/test/TMP/RefundTestSuite/: RefundTestSuite.sh
frontend/test/TestFramework/: Clean.sh  CleanTest.sh  Colours.sh  Logger.sh  Setup.sh  TestCase.sh  TestSuite.sh
(+147 files in other folders)
